LIST OF CHANGES

 - Deleted unused methods from a number of models and views.
   - npg::model::instrument_annotation -
      annotations_by_instrument_over_default_uptime,
      dates_of_annotations_over_default_uptime
   - npg::view::run -
      list_summary, selected_days
   - npg::model_run_status -
       current_run_statuses, latest_current_run_status,
       active_runs_over_last_30_days, epoch
 - Deleted instrument_utilisation table from the tracking database. All
   code that was using this table was removed long time ago. Tha last
   record in this table is from 2016-11-12. The reports about instrument
   utilisation are now generated dynamically by C<bin/illumina_instruments_uptime> -
   a script in this package.
 - Replace mark docker image with mark golang executable from github,
   on ISG's docker image, for documentation publishing

release 102.1.0 (2025-01-16)
 - Fixed perlbrew installation by installing libdevel-patchperl-perl in
   GitHub runner.
 - Fixed CI for ubuntu 24.04 by manually installing libmodule-runtime-perl
 - Extend the lims api to consider the sample_uuids attribute (in its plural
   form) while using the ml_warehouse driver mainly for tag0. Also, it
   extends tests for novaseq multiruns to use sample_uuid (in its single
   form).

release 102.0.0 (2024-11-28)
 - Removed 'bin/npg_deletable_dr_runs' since dr storage is decommissioned

release 101.6.0 (2024-10-24)
 - Added sample_uuid and sample_lims methods to st::api::lims
 - Patched st::api::lims::samplesheet to allow for scalar attributes
   ending with 's'. Previously the values of attributes with names
   ending with 's' were automatically converted to lists. In fact,
   this was necessary only for comma-separated strings of email addresses.
   The part of code that deals with email addresses was changed to
   work on attributes with names starting with 'email' rather than
   ending with 's'. Prior to applying this patch the value of the