@@ -71,7 +71,6 @@ data/templates/run_lane_list_tag.tt2
 data/templates/run_lane_read.tt2
 data/templates/run_lane_update_tags.tt2
 data/templates/run_list.tt2
-data/templates/run_list_stuck_runs.tt2
 data/templates/run_read.tt2
 data/templates/run_status_create.tt2
 data/templates/run_status_table.tt2
@@ -548,7 +547,6 @@ t/data/rendered/run.html-POST
 t/data/rendered/run.html;add
 t/data/rendered/run/1.html;update_tags
 t/data/rendered/run/1.html;update_tags-no-tags
-t/data/rendered/run/list_stuck_runs.html
 t/data/rendered/run/runs_on_instrument.html
 t/data/rendered/run_annotation_add_ajax.html
 t/data/rendered/run_lane/1;update_tags
