@@ -1,23 +1,0 @@
-<!-- begin $Id: run_list_stuck_runs.tt2 13585 2011-07-07 13:23:08Z ajb $ -->
-<h2>Potentially Stuck Runs</h2>
-  
-<p>Runs which may be stuck at a status for longer than expected after they have finished on the instrument, during automatic processing</p>
-[% FOREACH status_group IN model.potentially_stuck_runs -%]
-<table id="[% status_group.key %]" class="zebra">
- <caption>[% status_group.key %]</caption>
- <thead>
-  <tr>
-   <th>id_run</th>
-   <th>days at status</th>
-   <th>priority</th>
-   <th/>
-  </tr>
- </thead>
- <tbody>
-[% FOREACH row IN status_group.value -%]
-   <tr><td><a href="[% SCRIPT_NAME %]/run/[% row.id_run %]">[% row.id_run %]</a></td><td>[% row.days %]</td><td>[% row.priority %]</tr>
-[% END -%]
- </tbody>
-</table>
-[% END -%]
-<!-- end $Id: run_list_stuck_runs.tt2 13585 2011-07-07 13:23:08Z ajb $ -->
