@@ -4,9 +4,6 @@ use strict;
 use warnings;
 use English qw(-no_match_vars);
 use Carp;
-use Date::Parse;
-use DateTime;
-use Readonly;
 
 use npg::model::event;
 use npg::model::run_status_dict;
@@ -14,19 +11,6 @@ use npg::model::run_status_dict;
 use base qw(npg::model);
 
 our $VERSION = '0';
-
-Readonly::Hash our %DAYS_PER_STATUS => (
-  'run complete' => 1,
-  'run mirrored' => 1,
-  'analysis pending' => 1,
-  'analysis in progress' => 2,
-  'secondary analysis in progress' => 3,
-  'analysis complete' => 1,
-  'archival pending' => 1,
-  'analysis in progress' => 1,
-  'analysis complete' => 1,
-  'archival in progress' => 2,
-);
 
 __PACKAGE__->mk_accessors(fields());
 __PACKAGE__->has_a([qw(run user run_status_dict)]);
@@ -77,7 +61,7 @@ sub create {
 
     my $desc = $self->run_status_dict->description();
 
-    my $msg = qq($desc for run @{[$self->run->name()]}\nhttp://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/@{[$self->run->name()]}\n$history\n\n$contents_of_lanes);
+    my $msg = qq($desc for run @{[$self->run->name()]}\nhttp://sfweb.internal.sanger.ac.uk:12443/perl/npg/run/@{[$self->run->name()]}\n$history\n\n$contents_of_lanes);
     my $event = npg::model::event->new({
                                       run                => $self->run(),
                                       status_description => $desc,
@@ -111,57 +95,6 @@ sub create {
   };
 
   return 1;
-}
-
-sub potentially_stuck_runs {
-  my ( $self ) = @_;
-  my $return = {};
-
-  my $rows = $self->_runs_at_requested_statuses();
-
-  my $dtnow = $self->_datetime_now();
-
-  foreach my $row ( @{ $rows } ) {
-    my ( $id_run, $date, $status, $priority ) = @{ $row };
-    my ( $year, $month, $day ) = $date =~ /(\d{4})-(\d{2})-(\d{2})/xms;
-    my $dt = DateTime->new(
-      year => $year, month => $month, day => $day, time_zone => 'UTC',
-    );
-    my $days = $dtnow->delta_days($dt)->in_units( q{days} );
-    if ( $days >= $DAYS_PER_STATUS{$status} ) {
-      push @{ $return->{$status} }, { id_run => $id_run, days => $days, priority => $priority };
-    }
-  }
-
-  return $return;
-}
-
-sub _runs_at_requested_statuses {
-  my ( $self ) = @_;
-
-  if ( ! $self->{_runs_at_requested_statuses} ) {
-    my @statuses_for_query = keys %DAYS_PER_STATUS;
-    my $query_string = q{'} . ( join q{','}, keys %DAYS_PER_STATUS ) . q{'};
-
-    my $query =  qq{SELECT rs.id_run, rs.date, rsd.description, r.priority
-                    FROM run_status rs, run_status_dict rsd, run r
-                    WHERE  rs.iscurrent = 1
-                    AND    rs.id_run_status_dict = rsd.id_run_status_dict
-                    AND    rs.id_run = r.id_run
-                    AND    rsd.description IN ($query_string)
-                    ORDER BY rsd.id_run_status_dict, rs.id_run};
-
-    $self->{_runs_at_requested_statuses} = $self->util->dbh->selectall_arrayref( $query );
-  }
-  return $self->{_runs_at_requested_statuses};
-}
-
-sub _datetime_now {
-  my ( $self ) = @_;
-  if ( ! $self->{_datetime_now} ) {
-    $self->{_datetime_now} = DateTime->now( time_zone => 'UTC' );
-  }
-  return $self->{_datetime_now};
 }
 
 1;
@@ -204,29 +137,6 @@ npg::model::run_status
   Sets all other run_status for this id_run to iscurrent=0
   Sets this iscurrent=1 (whatever was set/unset in the object);
 
-=head2 potentially_stuck_runs
-
-returns a hashref, keyed on status, which contains all the runs that are over a certain time period within a current run status
-
-  i.e. run complete => 1 day
-       run mirrored => 1 day
-       analysis pending => 1 day
-       analysis in progress => 2 days
-       secondary analysis in progress => 3 days
-       analysis complete => 1 day
-       archival pending => 1 day
-       analysis in progress => 1 day
-       analysis complete => 1 day
-
-You get back a hashref as follows
-
-  {
-    'run complete' => [ { id_run => 1234, days => 2 }, { id_run => 2341, days => 3 } ],
-    ...
-  }
-
-  my $hPotentiallyStuckRuns = $oRunStatus->potentially_stuck_runs();
-
 =head1 DIAGNOSTICS
 
 =head1 CONFIGURATION AND ENVIRONMENT
@@ -250,8 +160,6 @@ You get back a hashref as follows
 =item npg::model::event
 
 =item npg::model::run_status_dict
-
-=item Date::Parse
 
 =back
 
