@@ -1,48 +1,0 @@
-<h2>Potentially Stuck Runs</h2>
-  
-<p>Runs which may be stuck at a status for longer than expected after they have finished on the instrument, during automatic processing</p>
-<table id="analysis complete" class="zebra">
- <caption>analysis complete</caption>
- <thead>
-  <tr>
-   <th>id_run</th>
-   <th>days at status</th>
-   <th/>
-  </tr>
- </thead>
- <tbody>
-   <tr><td>1</td><td>1378</td></tr>
-   <tr><td>95</td><td>1378</td></tr>
- </tbody>
-</table>
-<table id="run complete" class="zebra">
- <caption>run complete</caption>
- <thead>
-  <tr>
-   <th>id_run</th>
-   <th>days at status</th>
-   <th/>
-  </tr>
- </thead>
- <tbody>
-   <tr><td>9948</td><td>436</td></tr>
-   <tr><td>9949</td><td>436</td></tr>
-   <tr><td>9950</td><td>436</td></tr>
-   <tr><td>9951</td><td>436</td></tr>
- </tbody>
-</table>
-<table id="run mirrored" class="zebra">
- <caption>run mirrored</caption>
- <thead>
-  <tr>
-   <th>id_run</th>
-   <th>days at status</th>
-   <th/>
-  </tr>
- </thead>
- <tbody>
-   <tr><td>5</td><td>1378</td></tr>
-   <tr><td>11</td><td>1378</td></tr>
-   <tr><td>12</td><td>1378</td></tr>
- </tbody>
-</table>
