@@ -1,5 +1,7 @@
 LIST OF CHANGES
 
+ - Replace mark docker image with mark golang executable from github,
+   on ISG's docker image, for documentation publishing
  - Deleted unused methods from a number of models and views.
    - npg::model::instrument_annotation -
       annotations_by_instrument_over_default_uptime,
@@ -9,6 +11,8 @@ LIST OF CHANGES
    - npg::model_run_status -
        current_run_statuses, latest_current_run_status,
        active_runs_over_last_30_days, epoch
+ - Deleted 'Stuck Runs' button from the admin top-level menu,
+   the associated template and the view and model methods.
  - Deleted instrument_utilisation table from the tracking database. All
    code that was using this table was removed long time ago. Tha last
    record in this table is from 2016-11-12. The reports about instrument
